03-kubernetes/k8s-default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app-service
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    app: my-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
